# rmagine

./: CMakeLists.txt
apps/rmagine_sensors/: CMakeLists.txt  main.cpp
src/rmagine_core/include/rmagine/simulation/: SimulationResults.hpp
src/rmagine_optix/include/rmagine/simulation/optix/: common.h  sim_program_data.h
src/rmagine_optix/include/rmagine/util/optix/: OptixDebug.hpp
src/rmagine_optix/src/simulation/optix/: SensorProgramHit.cu  sim_modules.cpp
